fixed the container problem and the aligning problem on medium screen size devices.

--- a/module2-solution/css/style.css
+++ b/module2-solution/css/style.css
@@ -1,6 +1,6 @@
         *{
 			box-sizing:border-box;
-			margin:0;
+			margin:auto;
 			padding:0;
 		}
 
@@ -11,60 +11,67 @@
 
 		p{   /*where the paragraph is going to fall*/
 			border: 1px solid black;
+			
 			padding: 10px;
 			padding-top: 60px;
 			background-color: #DEB887;
-			width: 80%;/*the width is going to take up only 90 % of the grid*/
+			/*the width is going to take up only 90 % of the grid*/
 			height: 200px;
-			margin-right:auto;  /*center the paragraph element*/
-			margin-left:auto;
-			margin-bottom: 15px;
+		    width:80%;
 			font-family: Helvetica;
 			color: white;
-		}
-        div #container{
-        	
+		}		 
+        /*div #container{
+           position:relative;
+          
+           padding: 0;
        	   background-color: maroon;
        	   margin-bottom: 15px;
+       	   margin-right: 5px;
        	   margin-left:5px;
        	   height:200px;
+       	  
        	   
        	   
+       }*/
+       #sectionTitle1,#sectionTitle2,#sectionTitle3{
+          
+          padding:5px;
+          width:15%;
+          height:30px;
+          left:165px;
+          top:30px;
+          
+          position: relative;
        }
        #sectionTitle1{
-          background-color: #5F9EA0;
-          padding:5px;
-          margin:0;
-          text-align: center;
-          width:70px;
-          height:30px;
-          
-          position: absolute;
-       }
+       	  background-color: #5F9EA0;
+       	}
        #sectionTitle2{
           background-color: #A52A2A;
-          padding:5px;
-          margin:0;
-          text-align: center;
-          width:70px;
-          height:30px;
           
-          position: absolute;
        }
        #sectionTitle3{
           background-color: #FF7550;
-          padding:5px;
-          margin:0;
-          text-align: center;
-          width:70px;
-          height:30px;
-          position: absolute;
+       }
+       #sectionTitle1 span,#sectionTitle2 span,#sectionTitle3 span{
+			position:absolute;
+		
+			text-align: center;
+			
+			
+            font-size:1em;
+		}
+
+       .row{
+       	width: 100%;
        }
        /*Large device*/
        @media (min-width:992px){
           .col-lg-1,.col-lg-2,.col-lg-3,.col-lg-4,.col-lg-5,.col-lg-6,.col-lg-7,.col-lg-8,
           .col-lg-9,.col-lg-10,.col-lg-11,.col-lg-12{
           	float: left;
+          	position:relative;
           }
 	      .col-lg-1{
 	      	width:8.33%;
@@ -112,7 +119,7 @@
           .col-md-1,.col-md-2,.col-md-3,.col-md-4,.col-md-5,.col-md-6,.col-md-7,.col-md-8,
           .col-md-9,.col-md-10,.col-md-11,.col-md-12{
           	float: left;
-          	
+          	position:relative;
           }
 	      .col-md-1{
 	      	width:8.33%;
@@ -121,7 +128,7 @@
 	      	width:16.66%;
 	      }
 	       .col-md-3{
-	      	width:100%;
+	      	width:25%;
 	      }
 	       .col-md-4{
 	      	width:33%;
@@ -149,6 +156,51 @@
 	      	width:91.66%;
 	      }
 	       .col-md-12{
+	      	width:100%;
+	      }
+
+       }
+       @media (max-width:767px) {
+       	 .col-sm-1,.col-sm-2,.col-sm-3,.col-sm-4,.col-sm-5,.col-sm-6,.col-sm-7,.col-sm-8,
+          .col-sm-9,.col-sm-10,.col-sm-11,.col-sm-12{
+          	float: left;
+          	position:relative;
+          }
+	      .col-sm-1{
+	      	width:8.33%;
+	      }
+	       .col-sm-2{
+	      	width:16.66%;
+	      }
+	       .col-sm-3{
+	      	width:25%;
+	      }
+	       .col-sm-4{
+	      	width:33%;
+	      }
+	       .col-sm-5{
+	      	width:41.66%;
+	      }
+	       .col-sm-6{
+	      	width:50%;
+	      }
+	       .col-sm-7{
+	      	width:58.33%;
+	      }
+	       .col-sm-8{
+	      	width:66.66%;
+	      }
+	       .col-sm-9{
+	      	width:74.99%;
+	      }
+	       .col-sm-10{
+	      	width:83.33%;
+	      }
+
+           .col-sm-11{
+	      	width:91.66%;
+	      }
+	       .col-sm-12{
 	      	width:100%;
 	      }
 
